--- a/profile.html
+++ b/profile.html
@@ -46,15 +46,18 @@
     <h1 class="title text-center">WHO AM I ?</h1>
     <div class="row">
       <div class="col-md-6 about-me">
-        <p class="about-title">G. Roberts</p>
-        <p> I'm twenty-two, I'm a senior Computer Science student at UNCG, and a Marine Corps reservist.
+        <p class="about-title">G. Roberts</p></p>
+      </div>
+      <div class="comments">
+        <label for="Textarea"></label>
+        <textarea id="Textarea" name="Textarea" rows="10" cols="70"
+                  placeholder="I'm twenty-two, I'm a senior Computer Science student at UNCG, and a Marine Corps reservist.
           I like working out in the gym and I'm usually hogging the pull-up bar, but I've recently started rock climbing
           I enjoy playing indie video games and writing poetry. Recently I've been reading 'The Prophet' by Khalil Gibran.
           My favorite video games include League of Legends, Terraria, and Factorio.
-          I would like to develop my own video game some day and participate in a game jam.</p>
-      </div>
-      <div class="col-md-6">
-        <img src="img/Book1.jpg" class="img-fluid">
+          I would like to develop my own video game some day and participate in a game jam.">
+        </textarea>
+        <br><br>
       </div>
     </div>
   </div>
