--- a/index.html
+++ b/index.html
@@ -21,20 +21,24 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <!-- Move the search form here -->
+            <form class="form-inline d-flex">
+                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-outline-success" type="submit">Search</button>
+            </form>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="menu.html">MENU<span class="sr-only"></span></a>
+                    <a class="nav-link" href="index.html">MENU<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="profile.html">PROFILE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="settings.html">SETTINGS</a>
+                    <a class="nav-link" href="admin.html">SETTINGS</a>
                 </li>
-                <form class="form-inline my-2 my-lg-0">
-                    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                </form>
+                <li class="nav-item">
+                    <a class="nav-link" href="admin.html">LOGOUT</a>
+                </li>
             </ul>
         </div>
     </nav>
