--- a/manage-users.html
+++ b/manage-users.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Orchestra</title>
+    <title>Manage Users</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
           rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -44,22 +44,6 @@
             </ul>
         </div>
     </nav>
-</section>
-
-
-<!-- Admin Panel Buttons -->
-<section class="container my-5 text-center">
-    <div class="row">
-        <div class="col-md-4 mb-3">
-            <a href="manage-users.html" class="btn btn-dark btn-lg w-100">Manage Users</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="view-reports.html" class="btn btn-danger btn-lg w-100">View Reports</a>
-        </div>
-        <div class="col-md-4 mb-3">
-            <a href="admin.html" class="btn btn-info btn-lg w-100">Settings</a>
-        </div>
-    </div>
 </section>
 
 </body>
