--- a/profile.html
+++ b/profile.html
@@ -51,10 +51,9 @@
 
 <section id="profile">
   <div class="container">
-    <h1 class="title text-center">WHO AM I ?</h1>
+    <h1 class="title text-center">G. Roberts</h1>
     <div class="row">
       <div class="col-md-6 mx-auto">
-        <p class="about-title">G. Roberts</p>
       <div class="comments">
         <label for="Textarea"></label>
         <textarea id="Textarea" name="Textarea" rows="10" cols="70"
@@ -67,8 +66,18 @@
     <div class="container mt-5">
       <div class="row">
         <div class="col-md-6 mx-auto">
+          <p>MP3 files </p>
           <div class="mp3-box">
-            <p>MP3 player will go here</p>
+            <div class="col-md-6 mx-auto">
+              <audio controls>
+                <source src="sound/PinkPanther30.wav" type="audio/wav">
+                Your browser does not support the audio element.
+              </audio>
+              <audio controls>
+                <source src="sound/CantinaBand60.wav" type="audio/wav">
+                Your browser does not support the audio element.
+              </audio>
+            </div>
           </div>
         </div>
       </div>
