--- a/index.html
+++ b/index.html
@@ -49,13 +49,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6">
-                <p class="promo-title">BOOKLAB</p>
-                <p>Are you a writer?</p>
-                <p>Do you need a peer review?</p>
-                <a href="#"><img src="img/Desk1.jpg" class="play-btn"> WOW!</a>
-            </div>
-            <div class="col-md-6 text-center">
-                <img src="img/Book1.jpg" class="img-fluid">
+                <p class="promo-title">Orchestra</p>
             </div>
         </div>
     </div>
@@ -64,32 +58,27 @@
 
 <section id="services">
     <div class="container text-center">
-        <h1 class="title">why submit your writing to me ?</h1>
-
-        <div class="row">
-            <!-- Service 1 -->
-            <div class="col-md-4 services">
-                <img src="img/Desk2.jpg" class="services-img" alt="Service 1">
-                <p><b>Clarity</b></p>
-                <p>Test the water and see how new readers feel about your work.</p>
-            </div>
-
-            <!-- Service 2 -->
-            <div class="col-md-4 services">
-                <img src="img/OldBooks.jpg" class="services-img" alt="Service 2">
-                <p><b>Criticism</b></p>
-                <p>Recieve contructive criticism to help you write your best.</p>
-            </div>
-
-            <!-- Service 3 -->
-            <div class="col-md-4 services">
-                <img src="img/Creative.jpg" class="services-img" alt="Service 3">
-                <p><b>Validation</b></p>
-                <p>Recieving a great review is a great moral booster</p>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-6 mx-auto">
+                    <p>MP3 files </p>
+                    <div class="mp3-box">
+                        <div class="col-md-6 mx-auto">
+                            <audio controls>
+                                <source src="sound/PinkPanther30.wav" type="audio/wav">
+                                Your browser does not support the audio element.
+                            </audio>
+                            <audio controls>
+                                <source src="sound/CantinaBand60.wav" type="audio/wav">
+                                Your browser does not support the audio element.
+                            </audio>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
-        <a href="settings.html" type="button" class="btn btn-primary">Contact Me</a>
+        <a href="profile.html" type="button" class="btn btn-primary">Artist Profile</a>
     </div>
 </section>
 </body>
