--- a/admin.html
+++ b/admin.html
@@ -12,7 +12,8 @@
     <link rell="stylesheet"
           href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css">
 </head>
-<body>
+<body id="admin-page">
+
 
 <section id="nav-bar" class="nav-link">
     <nav class="navbar navbar-expand-lg navbar-light">
