--- a/manage-users.html
+++ b/manage-users.html
@@ -23,7 +23,6 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <!-- Move the search form here -->
             <form class="form-inline d-flex">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
@@ -44,6 +43,58 @@
             </ul>
         </div>
     </nav>
+</section>
+
+<section class="container my-5">
+    <h1 class="text-center mb-4">Manage Users</h1>
+
+    <table class="table table-striped table-bordered">
+        <thead class="thead-dark">
+        <tr>
+            <th>User ID</th>
+            <th>Username</th>
+            <th>Email</th>
+            <th>Role</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        <!-- Dummy Data Rows -->
+        <tr>
+            <td>1</td>
+            <td><a href="#">a_lusk</a></td>
+            <td>albert@orchestra.com</td>
+            <td>Admin</td>
+            <td>
+                <a href="#" class="btn btn-warning btn-sm">Suspend User</a>
+                <a href="#" class="btn btn-danger btn-sm">Delete User</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>2</td>
+            <td><a href="#">m_ingallinera</a></td>
+            <td>matthew@orchestra.com</td>
+            <td>User</td>
+            <td>
+                <a href="#" class="btn btn-warning btn-sm">Suspend User</a>
+                <a href="#" class="btn btn-danger btn-sm">Delete User</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>3</td>
+            <td><a href="#">g_roberts</a></td>
+            <td>gabe@orchestra.com</td>
+            <td>Provider</td>
+            <td>
+                <a href="#" class="btn btn-warning btn-sm">Suspend User</a>
+                <a href="#" class="btn btn-danger btn-sm">Delete User</a>
+            </td>
+        </tr>
+        <!-- Add more rows as needed -->
+        </tbody>
+    </table>
 </section>
 
 </body>
