--- a/index.html
+++ b/index.html
@@ -48,13 +48,12 @@
 <section id="banner">
     <div class="container">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-md-6 mx-auto">
                 <p class="promo-title">Orchestra</p>
             </div>
         </div>
     </div>
 </section>
-
 
 <section id="services">
     <div class="container text-center">
