--- a/view-reports.html
+++ b/view-reports.html
@@ -12,7 +12,7 @@
     <link rell="stylesheet"
           href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.6.0/css/fontawesome.min.css">
 </head>
-<body>
+<body id="reports-page">
 
 <section id="nav-bar" class="nav-link">
     <nav class="navbar navbar-expand-lg navbar-light">
@@ -44,6 +44,80 @@
             </ul>
         </div>
     </nav>
+</section>
+
+<section class="container my-5">
+    <h1 class="text-center mb-4">Reported Content</h1>
+
+    <!-- Nav tabs for switching between sound file reports and review reports -->
+    <ul class="nav nav-tabs" id="reportTabs" role="tablist">
+        <li class="nav-item" role="presentation">
+            <a class="nav-link active" id="sound-reports-tab" data-bs-toggle="tab" href="#sound-reports" role="tab">Reported Sound Files</a>
+        </li>
+        <li class="nav-item" role="presentation">
+            <a class="nav-link" id="review-reports-tab" data-bs-toggle="tab" href="#review-reports" role="tab">Reported Reviews</a>
+        </li>
+    </ul>
+
+    <div class="tab-content mt-4">
+        <!-- Sound Files Reports Tab -->
+        <div class="tab-pane fade show active" id="sound-reports" role="tabpanel">
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
+                <tr>
+                    <th>Reporter</th>
+                    <th>Reported Sound File</th>
+                    <th>Reason for Report</th>
+                    <th>Date of Report</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <!-- Dummy Sound File Report Row -->
+                <tr>
+                    <td><a href="#">m_ingallinera</a></td>
+                    <td><a href="#">Inappropriate Sound File</a></td>
+                    <td>Offensive language</td>
+                    <td>2024-09-30</td>
+                    <td>
+                        <a href="#" class="btn btn-success btn-sm">Ignore</a>
+                        <a href="#" class="btn btn-warning btn-sm">Suspend User</a>
+                    </td>
+                </tr>
+                <!-- More rows as needed -->
+                </tbody>
+            </table>
+        </div>
+
+        <!-- Reviews Reports Tab -->
+        <div class="tab-pane fade" id="review-reports" role="tabpanel">
+            <table class="table table-striped table-bordered">
+                <thead class="thead-dark">
+                <tr>
+                    <th>Reporter</th>
+                    <th>Reported Review</th>
+                    <th>Reason for Report</th>
+                    <th>Date of Report</th>
+                    <th>Actions</th>
+                </tr>
+                </thead>
+                <tbody>
+                <!-- Dummy Review Report Row -->
+                <tr>
+                    <td><a href="#">g_roberts</a></td>
+                    <td>you smell bad</td>
+                    <td>Not helpful</td>
+                    <td>2024-09-29</td>
+                    <td>
+                        <a href="#" class="btn btn-success btn-sm">Ignore</a>
+                        <a href="#" class="btn btn-danger btn-sm">Delete Review</a>
+                    </td>
+                </tr>
+                <!-- More rows as needed -->
+                </tbody>
+            </table>
+        </div>
+    </div>
 </section>
 
 </body>
