--- a/manage-users.html
+++ b/manage-users.html
@@ -25,7 +25,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <form class="form-inline d-flex">
                 <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btn btn-outline-dark" type="submit">Search</button>
             </form>
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
