--- a/profile.html
+++ b/profile.html
@@ -26,7 +26,7 @@
       <!-- Move the search form here -->
       <form class="form-inline d-flex">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <button class="btn btn-outline-dark" type="submit">Search</button>
       </form>
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
