rerouted logout button to login page on navbar

--- a/view-reports.html
+++ b/view-reports.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="admin.html">SETTINGS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="admin.html">LOGOUT</a>
+                    <a class="nav-link" href="login.html">LOGOUT</a>
                 </li>
             </ul>
         </div>
@@ -48,7 +48,6 @@
 <section class="container my-5">
     <h1 class="text-center mb-4">Reported Content</h1>
 
-    <!-- Nav tabs for switching between sound file reports and review reports -->
     <ul class="nav nav-tabs" id="reportTabs" role="tablist">
         <li class="nav-item" role="presentation">
             <a class="nav-link active" id="sound-reports-tab" data-bs-toggle="tab" href="#sound-reports" role="tab">Reported Sound Files</a>
@@ -72,7 +71,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <!-- Dummy Sound File Report Row -->
+
                 <tr>
                     <td><a href="#">m_ingallinera</a></td>
                     <td><a href="#">Inappropriate Sound File</a></td>
@@ -83,7 +82,7 @@
                         <a href="#" class="btn btn-warning btn-sm">Suspend User</a>
                     </td>
                 </tr>
-                <!-- More rows as needed -->
+                <!-- More rows if needed -->
                 </tbody>
             </table>
         </div>
@@ -101,7 +100,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <!-- Dummy Review Report Row -->
+
                 <tr>
                     <td><a href="#">g_roberts</a></td>
                     <td>you smell bad</td>
@@ -112,7 +111,7 @@
                         <a href="#" class="btn btn-danger btn-sm">Delete Review</a>
                     </td>
                 </tr>
-                <!-- More rows as needed -->
+                <!-- More rows if needed -->
                 </tbody>
             </table>
         </div>
