--- a/profile.html
+++ b/profile.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="admin.html">SETTINGS</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="admin.html">LOGOUT</a>
+          <a class="nav-link" href="login.html">LOGOUT</a>
         </li>
       </ul>
     </div>
