edited index.html header

--- a/index.html
+++ b/index.html
@@ -48,11 +48,13 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 mx-auto">
-                <p class="promo-title">Orchestra</p>
+                <h1>Orchestra</h1>
             </div>
         </div>
     </div>
 </section>
+
+
 
 <section id="services">
     <div class="container text-center">
