--- a/profile.html
+++ b/profile.html
@@ -69,7 +69,7 @@
           <p>MP3 files </p>
           <div class="mp3-box">
             <div class="col-md-6 mx-auto">
-              <audio controls>
+              <audio title=""controls>
                 <source src="sound/PinkPanther30.wav" type="audio/wav">
                 Your browser does not support the audio element.
               </audio>
