--- a/index.html
+++ b/index.html
@@ -57,29 +57,35 @@
 
 
 <section id="services">
-    <div class="container text-center">
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col-md-6 mx-auto">
-                    <p>MP3 files </p>
-                    <div class="mp3-box">
-                        <div class="col-md-6 mx-auto">
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-6 mx-auto">
+                <div class="music-box">
+                    <div class="col-md-6 mx-auto">
+                        <div class="audio-container">
+                            <span class="audio-title">Pink Panther</span>
                             <audio controls>
                                 <source src="sound/PinkPanther30.wav" type="audio/wav">
                                 Your browser does not support the audio element.
                             </audio>
-                            <audio controls>
+                            <span <a href="" type="button" class="btn btn-respond">💖</a> </span>
+                            <span <a href="" type="button" class="btn btn-respond">👎</a> </span>
+                            <span <a href="profile.html" type="button" class="btn btn-respond">Producer</a> </span>
+                        </div>
+                        <div class="audio-container">
+                            <span class="audio-title">Cantina Band</span>
+                            <audio title="Cantina Band" controls>
                                 <source src="sound/CantinaBand60.wav" type="audio/wav">
                                 Your browser does not support the audio element.
                             </audio>
+                            <span <a href="" type="button" class="btn btn-respond">💖</a> </span>
+                            <span <a href="" type="button" class="btn btn-respond">👎</a> </span>
+                            <span <a href="profile.html" type="button" class="btn btn-respond">Producer</a> </span>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-
-        <a href="profile.html" type="button" class="btn btn-primary">Artist Profile</a>
-    </div>
 </section>
 </body>
 </html>
