--- a/login.html
+++ b/login.html
@@ -18,20 +18,18 @@
   <div class="container">
     <h1 class="title text-center">Create a user login</h1>
     <div class="row">
-      <div class="col-md-6">
+      <div class="col-md-6 mx-auto">
         <p class="create-login"></p>
         <div class="comments">
-          <label for="Textarea"></label>
           <textarea id="Textarea" name="Textarea" rows="1" cols="30"
-                    placeholder="Create Username"></textarea>
+                    placeholder="Username"></textarea>
           <br><br>
 
           <textarea id="Textarea" name="Textarea" rows="1" cols="30"
-                    placeholder="Create Password"></textarea>
+                    placeholder="Password"></textarea>
           <br><br>
-
-          <button type="button" class="btn btn-primary">Create account</button>
         </div>
+        <a href="index.html" type="button" class="btn btn-primary">Login</a>
       </div>
     </div>
 </section>
