--- a/profile.html
+++ b/profile.html
@@ -66,24 +66,34 @@
     <div class="container mt-5">
       <div class="row">
         <div class="col-md-6 mx-auto">
-          <p>MP3 files </p>
-          <div class="mp3-box">
+          <div class="music-box">
             <div class="col-md-6 mx-auto">
-              <audio title=""controls>
-                <source src="sound/PinkPanther30.wav" type="audio/wav">
-                Your browser does not support the audio element.
-              </audio>
-              <audio controls>
-                <source src="sound/CantinaBand60.wav" type="audio/wav">
-                Your browser does not support the audio element.
-              </audio>
+              <div class="audio-container">
+                <span class="audio-title">Pink Panther</span>
+                <audio controls>
+                  <source src="sound/PinkPanther30.wav" type="audio/wav">
+                  Your browser does not support the audio element.
+                </audio>
+                <span <a href="" type="button" class="btn btn-respond">💖</a> </span>
+                <span <a href="" type="button" class="btn btn-respond">👎</a> </span>
+              </div>
+              <div class="audio-container">
+                <span class="audio-title">Cantina Band</span>
+                <audio title="Cantina Band" controls>
+                  <source src="sound/CantinaBand60.wav" type="audio/wav">
+                  Your browser does not support the audio element.
+                </audio>
+                <span <a href="" type="button" class="btn btn-respond">💖</a> </span>
+                <span <a href="" type="button" class="btn btn-respond">👎</a> </span>
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
 
-
+  <div class="col-md-6 mx-auto">
+    <a href="" type="button" class="btn btn-primary">Upload Music</a>
+  </div>
 </section>
 
 
