Final Commit Before Presentation

--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                                 <source src="sound/PinkPanther30.wav" type="audio/wav">
                                 Your browser does not support the audio element.
                             </audio>
-                            <span <a href="" type="button" class="btn btn-respond">💖</a> </span>
-                            <span <a href="" type="button" class="btn btn-respond">👎</a> </span>
+                            <span <a href="" type="button" class="btn btn-respond">Like</a> </span>
+                            <span <a href="" type="button" class="btn btn-respond">Dislike</a> </span>
                             <span <a href="profile.html" type="button" class="btn btn-respond">Producer</a> </span>
                         </div>
                         <div class="audio-container">
@@ -78,8 +78,8 @@
                                 <source src="sound/CantinaBand60.wav" type="audio/wav">
                                 Your browser does not support the audio element.
                             </audio>
-                            <span <a href="" type="button" class="btn btn-respond">💖</a> </span>
-                            <span <a href="" type="button" class="btn btn-respond">👎</a> </span>
+                            <span <a href="" type="button" class="btn btn-respond">Like</a> </span>
+                            <span <a href="" type="button" class="btn btn-respond">Dislike</a> </span>
                             <span <a href="profile.html" type="button" class="btn btn-respond">Producer</a> </span>
                         </div>
                     </div>
